--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "cypr": " cd projects/cy && npm run cy:open",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -33,8 +34,10 @@
     "@cypress/webpack-preprocessor": "5.5.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cross-env": "^7.0.3",
     "cypress": "^6.4.0",
     "ng-packagr": "^11.0.0",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "8.0.17",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
