--- a/projects/cy/cypress/tsconfig.json
+++ b/projects/cy/cypress/tsconfig.json
@@ -2,6 +2,15 @@
   "extends": "../../../tsconfig.json",
   "include": ["../../../node_modules/cypress", "**/*.ts"],
   "compilerOptions": {
-    "sourceMap": false
-  }
+    "sourceMap": true,
+    "types": ["cypress"],
+    "paths": {
+      "cy-lib": [
+        "projects/cy-lib/src/public-api.ts",
+        "dist/cy-lib/cy-lib",
+        "dist/cy-lib"
+      ],
+
+    }
+  },
 }
