--- a/projects/cy/tsconfig.spec.json
+++ b/projects/cy/tsconfig.spec.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/spec",
+    "outDir": "../../out-tsc/lib",
     "types": [
        "cypress"
     ]
