--- a/projects/cy/tsconfig.app.json
+++ b/projects/cy/tsconfig.app.json
@@ -3,7 +3,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "cy-lib": ["projects/cy-lib"]
+    }
   },
   "files": [
     "src/main.ts",
